fixed dropdown text alignment

--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,7 @@ button {
 	border-radius: 25px;
 	background-color: #eabf9f;
 
-	margin: 10px;
+	margin: 10px 0px;
 	padding: 15px;
 }
 img {
